Add events example